@@ -6,8 +6,8 @@
 ;;; See http://www.gnu.org/copyleft/gpl.html
 
 (defpackage "MATLAB"
-  (:case-sensitive t) (:case-inverted t)
-  (:use "CS-COMMON-LISP" "FFI")
+  (:modern t)
+  (:use "COMMON-LISP" "FFI")
   (:shadowing-import-from "EXPORTING"
            #:defconstant #:defun #:defmacro
            #:def-c-type #:def-c-enum #:def-c-struct #:def-c-var #:def-call-out))
