@@ -4,8 +4,8 @@
 
 (defpackage "SQL"
   (:nicknames "POSTGRES" "POSTGRESQL")
-  (:case-sensitive t) (:case-inverted t)
-  (:use "CS-COMMON-LISP" "FFI")
+  (:modern t)
+  (:use "COMMON-LISP" "FFI")
   (:shadowing-import-from "EXPORTING"
            #:defconstant #:defun #:defmacro
            #:def-c-type #:def-c-enum #:def-c-struct #:def-c-var #:def-call-out))
