@@ -1,5 +1,12 @@
 2005-01-24  Sam Steingold  <sds@gnu.org>
 
+	* modules/bindings/glibc/linux.lisp, modules/bindings/win32/win32.lisp:
+	* modules/matlab/matlab.lisp, modules/netica/netica.lisp:
+	* modules/pari/pari.lisp, modules/postgresql/postgresql.lisp:
+	* modules/wildcard/wildcard.lisp: use :MODERN in DEFPACKAGE
+
+2005-01-24  Sam Steingold  <sds@gnu.org>
+
 	* defpackage.lisp (defpackage): accept :MODERN argument
 
 2005-01-24  Sam Steingold  <sds@gnu.org>
